Better list row layout

--- a/res/layout/leave_history_row.xml
+++ b/res/layout/leave_history_row.xml
@@ -1,38 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-  		style="@style/LeaveHistoryLayout">
+		xmlns:android="http://schemas.android.com/apk/res/android"
+  		android:layout_width="fill_parent"
+    	android:layout_height="wrap_content">
 	<TextView android:id="@+id/date"
-    	xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:layout_alignParentTop="true"
+    	android:paddingLeft="7pt"
+    	android:paddingTop="7pt"
+    	android:paddingBottom="7pt"
     	android:focusable="false"  
-      	android:focusableInTouchMode="false"/>
+      	android:focusableInTouchMode="false"
+      	android:textSize="20sp"
+      	android:textColor="#000"/>
     <TextView android:id="@+id/separator"
-	    xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:text="@string/separator"
-    	android:paddingLeft="7pt"
-    	android:paddingRight="7pt"
+    	android:paddingLeft="4pt"
+    	android:paddingRight="4pt"
+    	android:paddingTop="7pt"
+    	android:paddingBottom="7pt"
     	android:layout_toRightOf="@+id/date"
     	android:focusable="false"  
-      	android:focusableInTouchMode="false"/>
+      	android:focusableInTouchMode="false"
+      	android:textSize="20sp"
+      	android:textColor="#000"/>
 	<TextView android:id="@+id/hours"
-	    xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
+    	android:paddingTop="7pt"
+    	android:paddingBottom="7pt"
     	android:layout_toRightOf="@+id/separator"
     	android:focusable="false"  
-      	android:focusableInTouchMode="false"/>
-    <Button android:id="@+id/notes"
-	    xmlns:android="http://schemas.android.com/apk/res/android"
+      	android:focusableInTouchMode="false"
+      	android:textSize="20sp"
+      	android:textColor="#000"/>
+    <ImageView android:id="@+id/notes"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
-    	android:layout_alignParentTop="true"
     	android:layout_alignParentRight="true"
-    	android:text="note"
     	android:focusable="false"  
       	android:focusableInTouchMode="false"
+      	android:src="@drawable/ic_action_info"
+      	android:layout_centerInParent="true"
+      	android:paddingRight="5pt"
     	/>
 </RelativeLayout>
