--- a/res/layout/leave_category_row.xml
+++ b/res/layout/leave_category_row.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
   		style="@style/LeaveHistoryLayout"
-  		orientation="horizontal">
+  		android:orientation="horizontal">
 	<TextView android:id="@+id/categoryTitle"
-	    xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"/>
+    	android:layout_height="wrap_content"
+    	android:textSize="20sp"
+      	android:textColor="#000"/>
 </LinearLayout>
