--- a/res/layout/notes_fragment.xml
+++ b/res/layout/notes_fragment.xml
@@ -7,7 +7,7 @@
         <TextView
             android:id="@+id/notes"
             android:layout_height="wrap_content"
-            android:layout_width="fill_parent"
+            android:layout_width="250sp"
             android:padding="10px" />
 
         <LinearLayout
