--- a/res/layout/new_user_fragment.xml
+++ b/res/layout/new_user_fragment.xml
@@ -36,8 +36,7 @@
   			android:layout_height="wrap_content">
 
   		<Button android:id="@+id/save"
-  			android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+  			style="@style/QuickUseButton"
           	android:text="Save" />
 
 	</LinearLayout>
