--- a/res/layout/notes_fragment.xml
+++ b/res/layout/notes_fragment.xml
@@ -17,8 +17,7 @@
   			android:layout_height="wrap_content">
 
   		<Button android:id="@+id/close"
-  			android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+  			style="@style/QuickUseButton"
           	android:text="Close" />
 
 	</LinearLayout>
