--- a/res/layout/new_user_fragment.xml
+++ b/res/layout/new_user_fragment.xml
@@ -27,6 +27,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
 			android:entries="@array/leave_intervals"
+			android:textColor="#ff000000"
 			android:entryValues="@array/leave_intervals" />
 			
         <LinearLayout
