--- a/res/layout/notes_fragment.xml
+++ b/res/layout/notes_fragment.xml
@@ -7,6 +7,7 @@
         <TextView
             android:id="@+id/notes"
             android:layout_height="wrap_content"
+            android:textColor="#ff000000"
             android:layout_width="250sp"
             android:padding="10px" />
 
