--- a/res/layout/leave_category_list.xml
+++ b/res/layout/leave_category_list.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#dddddd">
 
   <ListView android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="@drawable/bottomborder"/>
   <TextView android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
