--- a/res/layout/leave_history_list.xml
+++ b/res/layout/leave_history_list.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#dddddd">
 
   <ListView android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
-  <TextView android:id="@+id/loading"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Loading"/>
+        android:background="@drawable/bottomborder"
+        />
+  <TextView android:id="@+id/android:empty"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="7pt"
+        android:paddingTop="7pt"
+        android:paddingBottom="7pt"
+        android:text="No leave history"
+        android:background="@drawable/bottomborder"/>
 
 </LinearLayout>
