--- a/res/layout/leave_history_row.xml
+++ b/res/layout/leave_history_row.xml
@@ -37,7 +37,7 @@
       	android:focusableInTouchMode="false"
       	android:textSize="20sp"
       	android:textColor="#000"/>
-    <ImageButton android:id="@+id/notes"
+    <ImageView android:id="@+id/notes"
     	android:layout_width="wrap_content"
     	android:layout_height="fill_parent"
     	android:layout_alignParentRight="true"
@@ -45,6 +45,7 @@
       	android:focusableInTouchMode="false"
       	android:src="@drawable/ic_action_info"
       	android:layout_centerInParent="true"
-      	style="?android:attr/borderlessButtonStyle"
+      	android:padding="7pt"
+      	style="@style/NotesButton"
     	/>
 </RelativeLayout>
