--- a/res/layout/new_user_fragment.xml
+++ b/res/layout/new_user_fragment.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/new_user"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:layout_gravity="center" android:orientation="vertical"  >
+    android:layout_gravity="center" android:orientation="vertical"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp">
 
 	<TextView
             android:id="@+id/dateLabel"
