Fixed leave interval text, format list for add hr

--- a/res/layout/leave_history_row.xml
+++ b/res/layout/leave_history_row.xml
@@ -3,40 +3,30 @@
 		xmlns:android="http://schemas.android.com/apk/res/android"
   		android:layout_width="fill_parent"
     	android:layout_height="wrap_content">
+    <LinearLayout android:id="@+id/two_row"
+  		android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:orientation="vertical"
+    	android:layout_alignParentTop="true">
+    <TextView android:id="@+id/hours"
+    	android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:paddingTop="5pt"
+    	android:paddingLeft="5pt"
+    	android:focusable="false"  
+      	android:focusableInTouchMode="false"
+      	android:textSize="20sp"
+      	android:textColor="#000"/>
 	<TextView android:id="@+id/date"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
-    	android:layout_alignParentTop="true"
-    	android:paddingLeft="7pt"
-    	android:paddingTop="7pt"
-    	android:paddingBottom="7pt"
+    	android:paddingLeft="5pt"
+    	android:paddingBottom="5pt"
     	android:focusable="false"  
       	android:focusableInTouchMode="false"
-      	android:textSize="20sp"
-      	android:textColor="#000"/>
-    <TextView android:id="@+id/separator"
-    	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-    	android:text="@string/separator"
-    	android:paddingLeft="4pt"
-    	android:paddingRight="4pt"
-    	android:paddingTop="7pt"
-    	android:paddingBottom="7pt"
-    	android:layout_toRightOf="@+id/date"
-    	android:focusable="false"  
-      	android:focusableInTouchMode="false"
-      	android:textSize="20sp"
-      	android:textColor="#000"/>
-	<TextView android:id="@+id/hours"
-    	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-    	android:paddingTop="7pt"
-    	android:paddingBottom="7pt"
-    	android:layout_toRightOf="@+id/separator"
-    	android:focusable="false"  
-      	android:focusableInTouchMode="false"
-      	android:textSize="20sp"
-      	android:textColor="#000"/>
+      	android:textSize="15sp"
+      	android:textColor="#666"/>
+    </LinearLayout>
     <ImageView android:id="@+id/notes"
     	android:layout_width="wrap_content"
     	android:layout_height="fill_parent"
@@ -45,7 +35,7 @@
       	android:focusableInTouchMode="false"
       	android:src="@drawable/ic_action_info"
       	android:layout_centerInParent="true"
-      	android:padding="7pt"
+      	android:padding="5pt"
       	style="@style/NotesButton"
     	/>
 </RelativeLayout>
