New test cases, cleanup

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -6,6 +6,7 @@
         <item>Weekly</item>
         <item>Bi-Weekly</item>
         <item>Monthly</item>
+        <item>Twice Monthly</item>
         <item>Yearly</item>
     </array>
     <array
