History rounding, use dialog button label

--- a/res/layout/use_hours_fragment.xml
+++ b/res/layout/use_hours_fragment.xml
@@ -42,7 +42,7 @@
           	
         <Button android:id="@+id/addHours"
   			style="@style/QuickUseButton"
-          	android:text="Add" />
+          	android:text="Use" />
 
 	</LinearLayout>
 </LinearLayout>
