--- a/res/layout/calendar.xml
+++ b/res/layout/calendar.xml
@@ -9,11 +9,11 @@
 	android:id="@+id/header"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:gravity="left"
     >
 <TextView  
@@ -33,7 +33,7 @@
 
 <TextView  
 	android:id="@+id/title" 
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:layout_width="wrap_content"
     android:layout_centerHorizontal="true"
     android:padding="5dp"
@@ -46,7 +46,7 @@
     />
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:gravity="right"
     android:layout_toRightOf="@+id/title"
     >
