--- a/res/values-v11/style.xml
+++ b/res/values-v11/style.xml
@@ -11,4 +11,6 @@
     <style name="NotesButton">
     	<item name="android:background">?android:attr/selectableItemBackground</item>
     </style>
+    <style name="DialogLayout">
+    </style>
 </resources>
