--- a/res/layout/new_user_fragment.xml
+++ b/res/layout/new_user_fragment.xml
@@ -4,7 +4,8 @@
     android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:layout_gravity="center" android:orientation="vertical"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp">
+    android:paddingRight="10dp"
+    style="@style/DialogLayout">
 
 	<TextView
             android:id="@+id/dateLabel"
