--- a/res/layout/new_user_fragment.xml
+++ b/res/layout/new_user_fragment.xml
@@ -3,11 +3,18 @@
     android:id="@+id/new_user"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:layout_gravity="center" android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
     style="@style/DialogLayout">
+    
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    	android:id="@+id/new_user"
+    	android:layout_width="fill_parent" 
+    	android:layout_height="wrap_content"
+    	android:layout_gravity="center" 
+    	android:orientation="vertical"
+    	android:paddingLeft="10dp"
+    	android:paddingRight="10dp">
 
-	<TextView
+		<TextView
             android:id="@+id/dateLabel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -32,16 +39,14 @@
 			android:entries="@array/leave_intervals"
 			android:textColor="#ff000000"
 			android:entryValues="@array/leave_intervals" />
-			
-        <LinearLayout
-  			style="@style/ButtonLayout"
+	</LinearLayout>
+    <LinearLayout
+  			style="@style/DialogButtonLayout"
   			android:orientation="horizontal"
   			android:layout_width="fill_parent" 
   			android:layout_height="wrap_content">
-
   		<Button android:id="@+id/save"
-  			style="@style/QuickUseButton"
+  			style="@style/DialogButton"
           	android:text="Save" />
-
 	</LinearLayout>
 </LinearLayout>
