--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -96,8 +96,9 @@
     	<item name="android:background">@drawable/topborder</item>
     	<item name="android:paddingTop">2dp</item>
     </style>
-    <style name="DialogButton" parent="@android:style/Widget.Holo.Light.Button.Borderless.Small">
-    	<item name="android:layout_height">wrap_content</item>
+    <style name="DialogButton">
+    	<item name="android:background">@android:color/transparent</item>
+    	<item name="android:layout_height">40dp</item>
     	<item name="android:layout_width">fill_parent</item>
         <item name="android:layout_weight">1</item>
     </style>
