--- a/res/layout/widget.xml
+++ b/res/layout/widget.xml
@@ -13,18 +13,20 @@
         android:id="@+id/categoryLabel"
         android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
-    	android:background="#eeeeee"
-    	android:padding="@dimen/widget_margin" />
+    	android:padding="4dp"
+    	android:background="#eeeeee" />
     <TextView
         android:id="@+id/hoursAvailable"
         android:layout_width="match_parent"
     	android:layout_height="wrap_content"
+    	android:padding="4dp"
     	android:background="#ffffff" />
     <TextView
         android:id="@+id/hoursAvailableAsOf"
         android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:background="#ffffff"
+    	android:padding="4dp"
         android:text="@string/hours_avail_as_of" />
 	</LinearLayout>
 </FrameLayout>
