--- a/res/layout/leave_category_edit_fragment.xml
+++ b/res/layout/leave_category_edit_fragment.xml
@@ -75,7 +75,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
 			android:layout_below="@+id/initialHoursLabel"
-			android:inputType="text" />
+			android:inputType="numberDecimal" />
 			
 		<TextView
             android:id="@+id/leaveCapTypeLabel"
